force-app/main/default/objects/Account/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <label>Background Check</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCYF Child Abuse and Neglect Registry Check</fullName>
            </value>
            <value>
                <fullName>Comprehensive Criminal Background Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>