force-app/main/default/objects/Account/fields/CC_30_Days_Orientation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_30_Days_Orientation_Completion_Date__c</fullName>
    <label>30 Days Orientation Completion Date</label>
    <type>Date</type>
</CustomField>