force-app/main/default/objects/Account/fields/CC_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Account_Status__c</fullName>
    <description>Indicates if account is active or inactive</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>