force-app/main/default/objects/Account/fields/CC_Account_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Account_Sub_Type__c</fullName>
    <description>Represent if it is a referral account or not.</description>
    <label>Account Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Non-Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>