force-app/main/default/objects/Account/fields/CC_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6 or Fewer**</fullName>
            </value>
            <value>
                <fullName>Group Home</fullName>
            </value>
            <value>
                <fullName>Licensed Center</fullName>
            </value>
            <value>
                <fullName>Licensed Family Home</fullName>
            </value>
            <value>
                <fullName>Registered Center</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Informal</fullName>
                <isActive>false</isActive>
                <label>Informal</label>
            </value>
            <value>
                <fullName>Licensed</fullName>
                <isActive>false</isActive>
                <label>Licensed</label>
            </value>
            <value>
                <fullName>Licensed Exempt</fullName>
                <isActive>false</isActive>
                <label>Licensed Exempt</label>
            </value>
            <value>
                <fullName>Tribal Licensed</fullName>
                <isActive>false</isActive>
                <label>Tribal Licensed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>