force-app/main/default/objects/Account/fields/CC_Address_Usage__c.field-meta.xml
<CustomField>
    <fullName>CC_Address_Usage__c</fullName>
    <label>Address Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cell Phone</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Other Phone</fullName>
            </value>
            <value>
                <fullName>Primary Phone</fullName>
            </value>
            <value>
                <fullName>Toll Free</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
            <value>
                <fullName>Web Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>