force-app/main/default/objects/Account/fields/CC_Alternate_Designator_3__c.field-meta.xml
<CustomField>
    <fullName>CC_Alternate_Designator_3__c</fullName>
    <label>Alternate Designator 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>