force-app/main/default/objects/Account/fields/CC_Alternate_Designator_3_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Alternate_Designator_3_Number__c</fullName>
    <label>Alternate Designator 3 Number</label>
    <length>22</length>
    <type>Text</type>
</CustomField>