force-app/main/default/objects/Account/fields/CC_Alternate_Designator__c.field-meta.xml
<CustomField>
    <fullName>CC_Alternate_Designator__c</fullName>
    <label>Alternate Designator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHIMES Case ID</fullName>
            </value>
            <value>
                <fullName>CHIMES Person ID</fullName>
            </value>
            <value>
                <fullName>Organization Assigned Substitute for SSN</fullName>
            </value>
            <value>
                <fullName>Passport Number</fullName>
            </value>
            <value>
                <fullName>Alien Registration Number</fullName>
            </value>
            <value>
                <fullName>Caseload ID</fullName>
            </value>
            <value>
                <fullName>NACCRRAware</fullName>
            </value>
            <value>
                <fullName>AWACS ID</fullName>
            </value>
            <value>
                <fullName>Driver&apos;s License Number</fullName>
            </value>
            <value>
                <fullName>CAPS Person Number</fullName>
            </value>
            <value>
                <fullName>CAPS Provider Number</fullName>
            </value>
            <value>
                <fullName>Teams Person Number</fullName>
            </value>
            <value>
                <fullName>Teams Case Number</fullName>
            </value>
            <value>
                <fullName>Teams Caseload Number</fullName>
            </value>
            <value>
                <fullName>Searchs Person Number</fullName>
            </value>
            <value>
                <fullName>CDS Client ID</fullName>
            </value>
            <value>
                <fullName>Federal Tax ID (not SSN)</fullName>
            </value>
            <value>
                <fullName>CDS Household ID</fullName>
            </value>
            <value>
                <fullName>Duplicate Person Record</fullName>
            </value>
            <value>
                <fullName>ECP Training ID</fullName>
            </value>
            <value>
                <fullName>ARMS Cust ID - Acct ID</fullName>
            </value>
            <value>
                <fullName>ARMS Customer ID</fullName>
            </value>
            <value>
                <fullName>ARMS Account ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>