force-app/main/default/objects/Account/fields/CC_Alternate_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Alternate_Phone_Number__c</fullName>
    <label>Alternate Phone Number</label>
    <type>Phone</type>
</CustomField>