force-app/main/default/objects/Account/fields/CC_Alternate_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Alternate_Phone_Type__c</fullName>
    <label>Alternate Phone Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cell</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>