force-app/main/default/objects/Account/fields/CC_AlternatePhone_used_for_text_messages__c.field-meta.xml
<CustomField>
    <fullName>CC_AlternatePhone_used_for_text_messages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Alternate Phone used for text messages</description>
    <label>Alternate Phone used for text messages</label>
    <type>Checkbox</type>
</CustomField>