force-app/main/default/objects/Account/fields/CC_Apt_Suite__c.field-meta.xml
<CustomField>
    <fullName>CC_Apt_Suite__c</fullName>
    <description>Stores business/facility/home billing Apt/Suite</description>
    <label>Apt/Suite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>