force-app/main/default/objects/Account/fields/CC_Are_emergency_parent_numbers_posted__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_emergency_parent_numbers_posted__c</fullName>
    <inlineHelpText>Are emergency telephone numbers and parent telephone numbers posted?</inlineHelpText>
    <label>Are emergency &amp; parent numbers posted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>