force-app/main/default/objects/Account/fields/CC_Are_you_a_teen_parent__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_you_a_teen_parent__c</fullName>
    <label>Are you a teen parent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>