force-app/main/default/objects/Account/fields/CC_AWACS_Address_Code__c.field-meta.xml
<CustomField>
    <fullName>CC_AWACS_Address_Code__c</fullName>
    <label>AWACS Address Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>