force-app/main/default/objects/Account/fields/CC_AWACS_EFT_ID__c.field-meta.xml
<CustomField>
    <fullName>CC_AWACS_EFT_ID__c</fullName>
    <label>AWACS EFT ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>