force-app/main/default/objects/Account/fields/CC_Background_Check_Status_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Background_Check_Status_Updated_Date__c</fullName>
    <label>Background Check Status Updated Date</label>
    <type>Date</type>
</CustomField>