force-app/main/default/objects/Account/fields/CC_Background_Consent__c.field-meta.xml
<CustomField>
    <fullName>CC_Background_Consent__c</fullName>
    <label>Background Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>