force-app/main/default/objects/Account/fields/CC_Background_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Background_Consent_Date__c</fullName>
    <label>Background Consent Date</label>
    <type>Date</type>
</CustomField>