force-app/main/default/objects/Account/fields/CC_Background_Verification_Completion_Dt__c.field-meta.xml
<CustomField>
    <fullName>CC_Background_Verification_Completion_Dt__c</fullName>
    <label>Background Verification Completion Dt</label>
    <type>Date</type>
</CustomField>