force-app/main/default/objects/Account/fields/CC_Billing_County_Other__c.field-meta.xml
<CustomField>
    <fullName>CC_Billing_County_Other__c</fullName>
    <description>Stores business/facility/home billing county if other is selected.</description>
    <label>Billing County(Other)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>