force-app/main/default/objects/Account/fields/CC_Birth_States__c.field-meta.xml
<CustomField>
    <fullName>CC_Birth_States__c</fullName>
    <description>State field to hold the birth value</description>
    <label>Birth State</label>
    <length>18</length>
    <type>Text</type>
</CustomField>