force-app/main/default/objects/Account/fields/CC_Birthdate_Verify_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Birthdate_Verify_Date__c</fullName>
    <label>Birthdate Verify Date</label>
    <type>Date</type>
</CustomField>