force-app/main/default/objects/Account/fields/CC_Block_Invoice_from_Auto_release_proce__c.field-meta.xml
<CustomField>
    <fullName>CC_Block_Invoice_from_Auto_release_proce__c</fullName>
    <label>Block Invoice from Auto-release processi</label>
    <length>10</length>
    <type>Text</type>
</CustomField>