force-app/main/default/objects/Account/fields/CC_Business_Admin__c.field-meta.xml
<CustomField>
    <fullName>CC_Business_Admin__c</fullName>
    <description>Stores point in time name of business admin (Can be replaced with formula)</description>
    <label>Business Admin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>