force-app/main/default/objects/Account/fields/CC_Business_Approver__c.field-meta.xml
<CustomField>
    <fullName>CC_Business_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to approver selected from service resource through round robin process</description>
    <label>ChildCare Business Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>