force-app/main/default/objects/Account/fields/CC_Business_Legal_Structure__c.field-meta.xml
<CustomField>
    <fullName>CC_Business_Legal_Structure__c</fullName>
    <label>Business Legal Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorporated</fullName>
            </value>
            <value>
                <fullName>Non-Profit / Religions Organization</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor/Self-Employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>