force-app/main/default/objects/Account/fields/CC_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Business_Name__c</fullName>
    <inlineHelpText>The Business Name should be correct and precise. If you are unsure of the business name, you may add contact only and invite the user to add their business details.</inlineHelpText>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>