force-app/main/default/objects/Account/fields/CC_BusinessRegisteredWithSoS__c.field-meta.xml
<CustomField>
    <fullName>CC_BusinessRegisteredWithSoS__c</fullName>
    <description>Indicates if business is registered with SOS ( Yes/No ).</description>
    <label>BusinessRegisteredWithSecretaryOfState</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>