force-app/main/default/objects/Account/fields/CC_BusinessType__c.field-meta.xml
<CustomField>
    <fullName>CC_BusinessType__c</fullName>
    <description>Stores the type of business</description>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor/Self-Employed</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership (LLP)</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company (LLC)</fullName>
            </value>
            <value>
                <fullName>C Corp</fullName>
            </value>
            <value>
                <fullName>S Corp</fullName>
            </value>
            <value>
                <fullName>B Corp</fullName>
            </value>
            <value>
                <fullName>Non-Profit Corporation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
                <isActive>false</isActive>
                <label>LLC</label>
            </value>
            <value>
                <fullName>LLP</fullName>
                <isActive>false</isActive>
                <label>LLP</label>
            </value>
            <value>
                <fullName>Limited Liability (LLC)</fullName>
                <isActive>false</isActive>
                <label>Limited Liability (LLC)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>