force-app/main/default/objects/Account/fields/CC_Care_ID_Sequence__c.field-meta.xml
<CustomField>
    <fullName>CC_Care_ID_Sequence__c</fullName>
    <label>Care ID Sequence</label>
    <length>40</length>
    <type>Text</type>
</CustomField>