force-app/main/default/objects/Account/fields/CC_CAREGIVER_APPROVAL_DATE__c.field-meta.xml
<CustomField>
    <fullName>CC_CAREGIVER_APPROVAL_DATE__c</fullName>
    <label>CAREGIVER APPROVAL DATE</label>
    <type>Date</type>
</CustomField>