force-app/main/default/objects/Account/fields/CC_Cell_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Cell_Phone_Number__c</fullName>
    <label>Cell Phone Number</label>
    <type>Phone</type>
</CustomField>