force-app/main/default/objects/Account/fields/CC_Child_Care_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Child_Care_Address__c</fullName>
    <description>Store address for home</description>
    <label>Child Care Address</label>
    <type>Address</type>
</CustomField>