force-app/main/default/objects/Account/fields/CC_Child_Care_Apt_Suite__c.field-meta.xml
<CustomField>
    <fullName>CC_Child_Care_Apt_Suite__c</fullName>
    <description>To store Apt Suite for childcare address.</description>
    <label>Child Care Apt/Suite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>