force-app/main/default/objects/Account/fields/CC_Child_Care_County__c.field-meta.xml
<CustomField>
    <fullName>CC_Child_Care_County__c</fullName>
    <label>Child Care County</label>
    <length>20</length>
    <type>Text</type>
</CustomField>