force-app/main/default/objects/Account/fields/CC_Child_Care_Provider_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Child_Care_Provider_Status_Date__c</fullName>
    <label>Child Care Provider Status Date</label>
    <type>Date</type>
</CustomField>