force-app/main/default/objects/Account/fields/CC_Citizenship_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CC_Citizenship_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Citizenship Indicator</label>
    <type>Checkbox</type>
</CustomField>