force-app/main/default/objects/Account/fields/CC_Citizenship_Verification_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Citizenship_Verification_Type__c</fullName>
    <label>Citizenship Verification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copied From CHIMES</fullName>
            </value>
            <value>
                <fullName>Online Application</fullName>
            </value>
            <value>
                <fullName>Agency Verified (Case Note)</fullName>
            </value>
            <value>
                <fullName>Copied from TEAMS</fullName>
            </value>
            <value>
                <fullName>Birth Certificate</fullName>
            </value>
            <value>
                <fullName>Social Security Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Birth Registry System</fullName>
            </value>
            <value>
                <fullName>Naturalized Citizen</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Qualified Alien (USCIS Verified)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>