force-app/main/default/objects/Account/fields/CC_Citizenship_Verify_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Citizenship_Verify_Date__c</fullName>
    <label>Citizenship Verify Date</label>
    <type>Date</type>
</CustomField>