force-app/main/default/objects/Account/fields/CC_College_credits_per_term__c.field-meta.xml
<CustomField>
    <fullName>CC_College_credits_per_term__c</fullName>
    <inlineHelpText>If attending college, how many credits is this student taking per quarter/semester?</inlineHelpText>
    <label>College credits per quarter/semester?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>