force-app/main/default/objects/Account/fields/CC_Comments__c.field-meta.xml
<CustomField>
    <fullName>CC_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>