force-app/main/default/objects/Account/fields/CC_Consider_your_family_an_intact_family__c.field-meta.xml
<CustomField>
    <fullName>CC_Consider_your_family_an_intact_family__c</fullName>
    <label>Consider your family an intact family?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>