force-app/main/default/objects/Account/fields/CC_County_Billing__c.field-meta.xml
<CustomField>
    <fullName>CC_County_Billing__c</fullName>
    <description>Stores business/facility/home billing county</description>
    <label>Billing County</label>
    <length>20</length>
    <type>Text</type>
</CustomField>