force-app/main/default/objects/Account/fields/CC_County_Mailing__c.field-meta.xml
<CustomField>
    <fullName>CC_County_Mailing__c</fullName>
    <description>Shipping County</description>
    <label>Shipping County</label>
    <length>20</length>
    <type>Text</type>
</CustomField>