force-app/main/default/objects/Account/fields/CC_Course_of_study_training_program__c.field-meta.xml
<CustomField>
    <fullName>CC_Course_of_study_training_program__c</fullName>
    <inlineHelpText>If college/university or training program, what is the course of study/training program?</inlineHelpText>
    <label>Course of study/training program?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>