force-app/main/default/objects/Account/fields/CC_Current_education_status__c.field-meta.xml
<CustomField>
    <fullName>CC_Current_education_status__c</fullName>
    <inlineHelpText>Current education status for this Household Member?</inlineHelpText>
    <label>Current education status?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prek</fullName>
            </value>
            <value>
                <fullName>Kindergarten Second ori</fullName>
            </value>
            <value>
                <fullName>Third Grade</fullName>
            </value>
            <value>
                <fullName>Fourth Grade</fullName>
            </value>
            <value>
                <fullName>Fifth Grade</fullName>
            </value>
            <value>
                <fullName>Sixth Grade</fullName>
            </value>
            <value>
                <fullName>Seventh Grade</fullName>
            </value>
            <value>
                <fullName>Eight Grade</fullName>
            </value>
            <value>
                <fullName>High School Freshman</fullName>
            </value>
            <value>
                <fullName>High School Sophomore</fullName>
            </value>
            <value>
                <fullName>High School Junior</fullName>
            </value>
            <value>
                <fullName>High School Senior/GED</fullName>
            </value>
            <value>
                <fullName>Vo-Tech</fullName>
            </value>
            <value>
                <fullName>Associates Degree</fullName>
            </value>
            <value>
                <fullName>Bachelors Degree</fullName>
            </value>
            <value>
                <fullName>College/University Freshman</fullName>
            </value>
            <value>
                <fullName>College/University Junior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>