force-app/main/default/objects/Account/fields/CC_Date_of_Inspection_Health_Cert__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_of_Inspection_Health_Cert__c</fullName>
    <label>Date of Inspection(Health Certification)</label>
    <type>Date</type>
</CustomField>