force-app/main/default/objects/Account/fields/CC_DBA_registered__c.field-meta.xml
<CustomField>
    <fullName>CC_DBA_registered__c</fullName>
    <description>Is this DBA registered with the Secretary of State?</description>
    <label>DBA registered with Secretary of States?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>