force-app/main/default/objects/Account/fields/CC_Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Deceased_Date__c</fullName>
    <label>Deceased Date</label>
    <type>Date</type>
</CustomField>