force-app/main/default/objects/Account/fields/CC_Degree_type_and_date_earned__c.field-meta.xml
<CustomField>
    <fullName>CC_Degree_type_and_date_earned__c</fullName>
    <inlineHelpText>What type of degree was earned, and when was it earned?</inlineHelpText>
    <label>Degree type and date earned?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>