force-app/main/default/objects/Account/fields/CC_Department_Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Department_Vendor_Number__c</fullName>
    <label>Department Vendor Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>